Fix for navbar spacing logged_out view

--- a/wye/static/sass/_custom.scss
+++ b/wye/static/sass/_custom.scss
@@ -21,7 +21,7 @@
     .navbar-nav>li>a.nav-btn {
         background: $primary;
         color: #fff;
-        margin: 13px 0;
+        margin: 11px 0;
         border-radius: 0.4em;
         padding: 4px 15px;
         &:hover {
